fixing alignment things

--- a/styles/_editForm.scss
+++ b/styles/_editForm.scss
@@ -5,6 +5,7 @@
   padding: 20px;
   font-family: var(--second-font);
   display: flex;
+  justify-content: flex-end;
   justify-content: end;
   align-items: center;
   &__log-out {
