--- a/styles/main.css
+++ b/styles/main.css
@@ -1598,7 +1598,8 @@ body {
   display: flex;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
-          justify-content: end;
+          justify-content: flex-end;
+  justify-content: end;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
